mich etwas mehr mit dem Manuskript beschäftigt. Is leider oder anscheinend der Grund warum ich ständig Fehler bekomme. Musste mal die Face-Api raushauen, irgendwie muss ich das mehr Stück für Stück versuchen. Echt schwierig wenn man keinen hat den ich spontan auch mal fragen kann. Damn. Zeit - 2h min

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Gesichtserkennung</title>
-  <link rel="stylesheet" href="popup.css">
+    <title>Meine Chrome Extension</title>
+    <script src="popup.js"></script>
 </head>
 <body>
-  <div id="popup-content">
-    <h1>Gesichtserkennung</h1>
-    <canvas id="popup-canvas"></canvas>
-    <div id="emotion-display"></div>
-  </div>
-  <script src="popup/popup.js"></script>
+    <button id="myButton">Klick mich!</button>
+    <div id="message"></div>
 </body>
 </html>
