ich kann jetzt Bilder downloaden, verstehe den Ablauf und Funktionsweise, auch wenn es erstmal einfach klingt, war es schon ein Act - Zeit: 2 1/2h

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Meine Chrome Extension</title>
-    <script src="popup.js"></script>
+  <title>Image Downloader</title>
+  <link rel="stylesheet" href="popup.css">
 </head>
 <body>
-    <button id="myButton">Klick mich!</button>
-    <div id="message"></div>
+  <button id="downloadImage">Download Image</button>
+  <script src="popup.js"></script>
 </body>
 </html>
