New Name for the project

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -6,7 +6,7 @@
   <title>Face Recognition</title>
 </head>
 <body>
-  <button id="downloadImage">Download and Analyze Image</button>
+  <button id="downloadImage">Download First Pic</button>
   <script src="popup.js"></script>
 </body>
 </html>
