--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Face Recognition</title>
+  <title>Helpfull-Extension</title>
+  <link rel="stylesheet" type="text/css" href="popup.css">
 </head>
+
 <body>
-  <button id="downloadImage">Download First Pic</button>
+  
+  <br><label for="zahl">Bilderanzahl zum download eingeben:</label></br>
+  <input type="number" id="number" name="Just Numbers">
+  <button id="downloadImage">Download Pictures</button>
   <script src="popup.js"></script>
 </body>
+
 </html>
