Kann jetzt bestimmte Wörter durch andere ersetzen, solagen die Website damit klarkommt

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -9,11 +9,18 @@
 </head>
 
 <body>
-  
+  <h3>Website-Picture Download</h3>
   <br><label for="zahl">Bilderanzahl zum download eingeben:</label></br>
   <input type="number" id="number" name="Just Numbers">
   <button id="downloadImage">Download Pictures</button>
   <script src="popup.js"></script>
+
+  <h3>Word Replacer</h3>
+  <label for="originalWord">Original Word:</label>
+  <input type="text" id="originalWord" placeholder="Original Word"></br>
+  <label for="newWord">New Word:</label>
+  <input type="text" id="newWord" placeholder="New Word">
+  <button id="replaceButton">Replace</button>
 </body>
 
 </html>
