mir sind etwas die Ideen ausgegangen, deswegen ploppen beim anklicken auch noch random Videos auf. Mal schaun ob das gut ankommen kann. Zeit - ca1h

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -25,19 +25,23 @@
     <button id="resetbutton">Reset</button>
   </div>
   <div id="goals">
-    <h3>Set Goals</h3>
-    <input type="text" id="goalInput" placeholder="Set your goal...">
-    <button id="setGoalButton">Set Goal</button>
-    <div id="goalList"></div>
+    
   </div>
   <div id="external-link">
     <a href="http://localhost:8000" target="_blank">View Charts</a>
   </div>
 
+ <!-- Platzhalter für das eingebettete Video -->
+ <div id="videoContainer">
+  <iframe id="youtubeVideo" width="180" height="320" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+<script src="script.js"></script>
+
+
   <input type="text" id="notice" placeholder="Notice here"></br>
   <button id="safenotes">Safe it</button>
   </div>
-  <script src="popup.js"></script>
+  <script src="videolist.js"></script>
 
 </body>
 
